[project]
name = "redbook-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromium>=0.0.0",
    "mcp[cli]>=1.26.0",
    "pandas==2.3.0",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "requests>=2.32.5",
]
